# OpenCL

./: .gitignore  CMakeLists.txt  README.md  biton.cc  biton.cl  biton.hh  err_what.cc  main.cc  sc.py  temp  timer.hh
tst/: test_gen.py
